# DanTabNN

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/dantabnn/: __init__.py  base.py  binary.py  logger.py  multiclass.py  mutliclass.py  regression.py
src/dantabnn/models/: ___init__.py  danet.py
src/dantabnn/preprocessing/: ___init__.py  encoder.py  scaler.py
src/dantabnn/tuning/: __init__.py  hyperparam_tune.py  tune_utils.py
src/dantabnn/utils/: __init__.py  metrics.py
