[project]
name = "dantabnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "python-semantic-release>=10.5.3",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "python-semantic-release>=10.5.3",
]

[tool.semantic_release]
version_variable = "pyproject.toml:project.version"
commit_parser = "angular"
branch = "main"
upload_to_pypi = false
upload_to_release = false  # Disable GitHub releases for now
commit_version_number = true  # Actually commit the version change
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
major_tags = ["BREAKING CHANGE", "BREAKING-CHANGE", "feat!"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor", "docs"]
